# Synapse

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
.kiro/specs/gallery-enhancements/: .config.kiro  design.md  requirements.md  tasks.md
backend/: dino-gallery-backend.spec  main.py  pyproject.toml  synapse-backend.spec
backend/api/: albums.py  duplicates.py  favorites.py  images.py  map.py  review.py  routes.py  search.py  settings.py  similar.py  timeline.py  trash.py
backend/core/: export_onnx.py  indexer.py  models.py  pipeline.py  query_parser.py  settings.py  thumbnails.py
backend/db/: database.py  queries.py  schema.sql
backend/tests/: test_indexer_remove.py
backend/tools/: export_onnx.py  package_models.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  sidecar.rs
src/api/: client.ts
src/components/: CreateAlbumDialog.tsx  DuplicateGroup.tsx  ImageCard.tsx  ImageGrid.tsx  ImageViewer.tsx  ImportProgress.tsx  SearchBar.tsx  Sidebar.tsx
src/hooks/: useBackend.tsx  useI18n.tsx  useTheme.tsx
src/pages/: AlbumPage.tsx  DuplicatesPage.tsx  FavoritesPage.tsx  GalleryPage.tsx  MapPage.tsx  SearchPage.tsx  SettingsPage.tsx  StatsPage.tsx  TimelinePage.tsx  TrashPage.tsx
src/styles/: globals.css
